--- a/settings.json
+++ b/settings.json
@@ -11,8 +11,8 @@
 	"donate": "94767043432",
 	"ig": "https://instagram.com/HYPER_MOD",
 	"gt": "https://github.com/HYPER-MOD",
-	"ownername": "© SL Sanduwa",
-	"botname":"「 Queen Alexa 」",
+	"ownername": "©  Sanduwa",
+	"botname":"「 SL SANDUWA BOT 」",
 	"img":"https://k.top4top.io/p_2001zgi471.jpg",
 	"thumb":"thumbnail.jpg",
 	"fakethumb":"fake.jpg",
